--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,15 @@
 <html><head>
+    
+    
+
+
+    <link rel="stylesheet" media="all" href="/assets/application-d12397cbc3a266ce5a99f7b588223090c55ca04a439953bb5f9304395de93fc3.css" data-turbolinks-track="reload">
+    <script src="/assets/application-114264dd93c8ff30e4335b71eed7949d66c4e7a8eb62e2de6284c046fe07104b.js" data-turbolinks-track="reload"></script>
+  <title>WebCampBackendNew</title><meta name="csrf-param" content="authenticity_token"><meta name="csrf-token" content="mu2Bw6LZeVoWIt1x44vL2LXENNyLFj24W5d/hJ5g89cCJ7AntQcFstDyH6TL0Rc9V5NyrGq9JxdKddQra3vNkA=="></head>
+
+  <body>
+    <p id="notice"></p>
+
 <h1>Books</h1>
 
 <table>
@@ -14,70 +25,84 @@
       <tr>
         <td>リーダブルコード</td>
         <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
-        <td><a class="show_78887" href="/books/78887">Show</a></td>
-        <td><a class="edit_78887" href="/books/78887/edit">Edit</a></td>
-        <td><a data-confirm="Are you sure?" class="destroy_78887" rel="nofollow" data-method="delete" href="/books/78887">Destroy</a></td>
+        <td><a class="show_78968" href="/books/78968">Show</a></td>
+        <td><a class="edit_78968" href="/books/78968/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78968" rel="nofollow" data-method="delete" href="/books/78968">Destroy</a></td>
       </tr>
       <tr>
         <td>トラブル知らずのシステム設計</td>
         <td>システム設計の要点を図解で説明してくれます</td>
-        <td><a class="show_78888" href="/books/78888">Show</a></td>
-        <td><a class="edit_78888" href="/books/78888/edit">Edit</a></td>
-        <td><a data-confirm="Are you sure?" class="destroy_78888" rel="nofollow" data-method="delete" href="/books/78888">Destroy</a></td>
+        <td><a class="show_78969" href="/books/78969">Show</a></td>
+        <td><a class="edit_78969" href="/books/78969/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78969" rel="nofollow" data-method="delete" href="/books/78969">Destroy</a></td>
       </tr>
       <tr>
         <td>たのしいRuby</td>
         <td>Rubyの入門におすすめです</td>
-        <td><a class="show_78889" href="/books/78889">Show</a></td>
-        <td><a class="edit_78889" href="/books/78889/edit">Edit</a></td>
-        <td><a data-confirm="Are you sure?" class="destroy_78889" rel="nofollow" data-method="delete" href="/books/78889">Destroy</a></td>
+        <td><a class="show_78970" href="/books/78970">Show</a></td>
+        <td><a class="edit_78970" href="/books/78970/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78970" rel="nofollow" data-method="delete" href="/books/78970">Destroy</a></td>
       </tr>
       <tr>
         <td>入門Git</td>
         <td>gitについての基本操作から内部構造まで解説してくれます</td>
-        <td><a class="show_78890" href="/books/78890">Show</a></td>
-        <td><a class="edit_78890" href="/books/78890/edit">Edit</a></td>
-        <td><a data-confirm="Are you sure?" class="destroy_78890" rel="nofollow" data-method="delete" href="/books/78890">Destroy</a></td>
-      </tr>
-      <tr>
-        <td>アルゴリズム図鑑</td>
-        <td>アルゴリズムについてカラーイラストでしっかり解説してくれます</td>
-        <td><a class="show_78891" href="/books/78891">Show</a></td>
-        <td><a class="edit_78891" href="/books/78891/edit">Edit</a></td>
-        <td><a data-confirm="Are you sure?" class="destroy_78891" rel="nofollow" data-method="delete" href="/books/78891">Destroy</a></td>
+        <td><a class="show_78971" href="/books/78971">Show</a></td>
+        <td><a class="edit_78971" href="/books/78971/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78971" rel="nofollow" data-method="delete" href="/books/78971">Destroy</a></td>
       </tr>
       <tr>
         <td>達人プログラマー</td>
         <td>プログラマ入門者は必読！</td>
-        <td><a class="show_78892" href="/books/78892">Show</a></td>
-        <td><a class="edit_78892" href="/books/78892/edit">Edit</a></td>
-        <td><a data-confirm="Are you sure?" class="destroy_78892" rel="nofollow" data-method="delete" href="/books/78892">Destroy</a></td>
+        <td><a class="show_78973" href="/books/78973">Show</a></td>
+        <td><a class="edit_78973" href="/books/78973/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78973" rel="nofollow" data-method="delete" href="/books/78973">Destroy</a></td>
       </tr>
       <tr>
         <td>データベース実践入門</td>
         <td>効率的なSQL文を教えてくれます</td>
-        <td><a class="show_78893" href="/books/78893">Show</a></td>
-        <td><a class="edit_78893" href="/books/78893/edit">Edit</a></td>
-        <td><a data-confirm="Are you sure?" class="destroy_78893" rel="nofollow" data-method="delete" href="/books/78893">Destroy</a></td>
+        <td><a class="show_78974" href="/books/78974">Show</a></td>
+        <td><a class="edit_78974" href="/books/78974/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78974" rel="nofollow" data-method="delete" href="/books/78974">Destroy</a></td>
+      </tr>
+      <tr>
+        <td>d</td>
+        <td>d</td>
+        <td><a class="show_78975" href="/books/78975">Show</a></td>
+        <td><a class="edit_78975" href="/books/78975/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78975" rel="nofollow" data-method="delete" href="/books/78975">Destroy</a></td>
+      </tr>
+      <tr>
+        <td>アルゴリズム図鑑</td>
+        <td>アルゴリズムについてカラーイラストでしっかり解説し</td>
+        <td><a class="show_78972" href="/books/78972">Show</a></td>
+        <td><a class="edit_78972" href="/books/78972/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78972" rel="nofollow" data-method="delete" href="/books/78972">Destroy</a></td>
+      </tr>
+      <tr>
+        <td>azd</td>
+        <td>swesdfgdt</td>
+        <td><a class="show_78977" href="/books/78977">Show</a></td>
+        <td><a class="edit_78977" href="/books/78977/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78977" rel="nofollow" data-method="delete" href="/books/78977">Destroy</a></td>
+      </tr>
+      <tr>
+        <td>新明解国語辞典 第七版 </td>
+        <td>djdj</td>
+        <td><a class="show_78978" href="/books/78978">Show</a></td>
+        <td><a class="edit_78978" href="/books/78978/edit">Edit</a></td>
+        <td><a data-confirm="Are you sure?" class="destroy_78978" rel="nofollow" data-method="delete" href="/books/78978">Destroy</a></td>
       </tr>
   </tbody>
 </table>
 
 
 <h2>New book</h2>
-<form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="aoO3VaMgC1sbDv/NPtuhg1sEccglYr+298cGWhniuYbySYaxtP53s93ePRgWgX1muVM3uMTJpRnmJa317PmHwQ==">
-
-<div class="field">
-    <label for="book_title">Title</label>
-    <p><input class="book_title" type="text" name="book[title]" id="book_title"></p>
-  </div>
-  <div class="field">
-    <label for="book_body">Body</label>
-    <p><textarea class="book_body" name="book[body]" id="book_body"></textarea></p>
-  </div>
-  <div class="actions">
-    <input type="submit" name="commit" value="Create Book" data-disable-with="Create Book">
-  </div>
-  </form>
-</body>
-</html>
+<%= form_with model: @book do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+	
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+	
+ <p> <%= f.submit 'Create Book' %></p>
+<% end %>
